@@ -1,4 +1,4 @@
-﻿﻿﻿----------------------
+﻿﻿﻿﻿----------------------
 phpMyAdmin - Changelog
 ----------------------
 
@@ -21,6 +21,8 @@ $Source$
       bug #1317655 information_schema browsing
     * db_details_db_info.php, db_details_structure.php:
       fixed display table statistics for information_schema
+    * db_details_links.php, header.inc.php:
+      moved database comment into header (serverinfo) after database name
 
 2005-10-09 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_properties_links.php: invalid js confirmation and operation feedback
